--- a/keypress.html
+++ b/keypress.html
@@ -57,11 +57,19 @@
 			<form id="messageForm">
 				<h2>My profile</h2>
 				<textarea id="message"></textarea>
-				<div id="charactersLeft">180 characters</div>
+				<div id="charactersLeft">180 character(s) left</div>
 				<div id="lastKey"></div>
 			</form>
 		</div>
-		<div class="panelRight"> </div>
+		<div class="panelRight"> 
+
+			<canvas id="groundofplay">
+
+
+
+			</canvas>
+
+		</div>
 		<script src="js/keypress.js"></script>
 </body>
 
